# jsonserver/server.js
@@ -33,7 +33,9 @@ server.use(jsonServer.rewriter({
     '/company/unfollow/:id': '/following_companies/:id',
     '/company_featured/:id/position': '/company_featured/:id',
     '/company_featured/add': '/company_featured',
-    '/company_featured/:id': '/company_featured/:id'
+    '/company_featured/:id': '/company_featured/:id',
+    '/projects/:projectId/accept/:memberId': '/projects_members/:memberId',
+    '/projects/:projectId/reject/:memberId': '/projects_members/:memberId'
     // '/update-user-notification-item/:id' : '/user-notification-items/:id'
 }));
 
